--- a/langchain.ipynb
+++ b/langchain.ipynb
@@ -9,8 +9,7 @@
     "import getpass\n",
     "import os\n",
     "\n",
-    "# os.environ[\"OPENAI_API_KEY\"] = getpass.getpass()\n",
-    "os.environ[\"OPENAI_API_KEY\"] = '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'"
+    "# os.environ[\"OPENAI_API_KEY\"] = getpass.getpass()\n"
    ]
   },
   {
